--- a/user/Makefile
+++ b/user/Makefile
@@ -7,7 +7,7 @@ CPP	+= -Iinclude -I./
 ARCHIVES = 
 DRIVERS  =
 LIBS	 = library/syscall.o library/stdio.o library/system.o library/string.o library/ctype.o library/semaphore.o\
-		   library/stdlib.o
+		   library/stdlib.o library/fio.o
 PROGRAMS = programs/lab8.bin programs/lab9.bin programs/lab10.bin programs/shell.bin
 
 %.o: %.nasm
